Updated /mining API to have commitment calls, along with /info checks verifying mining is active in LithosPool.
